test/fail/char-trap.mo
let _ = word32ToChar 0x110000
